--- a/packages/forge_engine/Cargo.toml
+++ b/packages/forge_engine/Cargo.toml
@@ -12,11 +12,14 @@ crate-type = ["rlib"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 thiserror = "1.0"
 walkdir = "2.5"
 regex = "1.10"
 once_cell = "1.19"
+sha2 = "0.10"
 
 [dev-dependencies]
 insta = "1.39"
 tempfile = "3.10"
+criterion = { version = "0.5", features = ["html_reports"] }
