--- a/packages/forge_engine/Cargo.toml
+++ b/packages/forge_engine/Cargo.toml
@@ -18,8 +18,10 @@ walkdir = "2.5"
 regex = "1.10"
 once_cell = "1.19"
 sha2 = "0.10"
+clap = { version = "4.5.4", features = ["derive"] }
 
 [dev-dependencies]
 insta = "1.39"
 tempfile = "3.10"
 criterion = { version = "0.5", features = ["html_reports"] }
+jsonschema = "0.17"
