--- a/packages/forge_engine/Cargo.toml
+++ b/packages/forge_engine/Cargo.toml
@@ -19,6 +19,7 @@ regex = "1.10"
 once_cell = "1.19"
 sha2 = "0.10"
 clap = { version = "4.5.4", features = ["derive"] }
+chrono = { version = "0.4", features = ["serde", "clock"] }
 
 [dev-dependencies]
 insta = "1.39"
