--- a/packages/forge_cli/pubspec.yaml
+++ b/packages/forge_cli/pubspec.yaml
@@ -8,8 +8,11 @@ environment:
   sdk: ">=3.4.0 <4.0.0"
 
 dependencies:
+  analyzer: ^6.5.0
   args: ^2.5.0
   path: ^1.9.0
+  yaml: ^3.1.2
 
 dev_dependencies:
   lints: ^4.0.0
+  test: ^1.25.2
