--- a/packages/forge_engine/Cargo.toml
+++ b/packages/forge_engine/Cargo.toml
@@ -9,6 +9,12 @@ description = "Core engine for parsing Flutter code into Forge graphs and compil
 [lib]
 crate-type = ["rlib"]
 
+[profile.release]
+panic = "abort"
+codegen-units = 1
+strip = true
+incremental = false
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -20,12 +26,12 @@ once_cell = "1.19"
 sha2 = "0.10"
 clap = { version = "4.5.4", features = ["derive"] }
 chrono = { version = "0.4", features = ["serde", "clock"] }
+jsonschema = "0.17"
 
 [dev-dependencies]
 insta = "1.39"
 tempfile = "3.10"
 criterion = { version = "0.5", features = ["html_reports"], default-features = false }
-jsonschema = "0.17"
 
 [[bench]]
 name = "codegen_multi"
